# pyd-back

./: .gitignore  .gitlab-ci.yml  .readthedocs.yml  CONTRIBUTORS.txt  LICENSE  Makefile  README.md  docker-compose.docs.yml  docker-compose.local.yml  docker-compose.production.yml  justfile  manage.py  pyproject.toml
.devcontainer/: devcontainer.json
.envs/.local/: .django  .postgres
compose/local/django/: Dockerfile
compose/local/docs/: Dockerfile
compose/production/django/: Dockerfile
compose/production/traefik/: traefik.yml
config/: api_router.py  asgi.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
core/: base_models.py
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
locale/en_US/LC_MESSAGES/: django.po
locale/fr_FR/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
pyd/: conftest.py
pyd/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
pyd/core/: model_utils.py  serializer_utils.py
pyd/place/: admin.py  apps.py  urls.py
pyd/place/migrations/: 0001_initial.py
pyd/place/models/: __init__.py  calendar.py  event.py  place.py  tag.py
pyd/place/serializers/: __init__.py  calendar.py  event.py  place.py  tag.py
pyd/place/signals/: place.py
pyd/place/views/: __init__.py  calendar.py  event.py  place.py  tag.py
pyd/templates/: base.html
pyd/users/: adapters.py  admin.py  apps.py  managers.py  models.py  serializers.py  urls.py  views.py
pyd/users/api/: serializers.py  views.py
pyd/users/migrations/: 0001_initial.py  0002_alter_user_managers_rename_id_user_uuid_and_more.py  0002_user_first_name_user_last_name.py
pyd/users/tests/: factories.py  test_admin.py  test_forms.py  test_managers.py  test_models.py  test_tasks.py  test_urls.py  test_views.py
pyd/users/tests/api/: test_urls.py  test_views.py
requirements/: production.txt
